--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="css/output.css" />
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300">
     
