--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <h2 class="text-3xl font-semibold">Welcome to My Developer Portfolio</h2>
     </main>
 
-    <script src="../src/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
 
