--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,30 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio</title>
+    
+    <title>Portfolio | Front-End Developer AK Shuvo</title>
+    <meta name="description" content="Explore the professional developer portfolio of Md. Abul Khayer Shuvo, a front-end developer skilled in HTML, CSS, Tailwind CSS, Bootstrap, and JavaScript. Check out featured projects and template shop." />
+    <meta name="keywords" content="Frontend Developer, HTML, CSS, JavaScript, Tailwind CSS, Bootstrap, Portfolio, Md. Abul Khayer Shuvo" />
+    <meta name="author" content="AK Shuvo" />
 
-    <!-- Font Awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-     <!-- Swiper CSS CDN -->
-     <link
-     rel="stylesheet"
-     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-     />
-     <!-- SwiperJS JS -->
-     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- Open Graph Meta Tags for social sharing -->
+    <meta property="og:title" content="AK Shuvo | Front-End Developer Portfolio" />
+    <meta property="og:description" content="Check out the featured projects and professional work of frontend developer AK Shuvo." />
+    <meta property="og:image" content="https://yourdomain.com/assets/preview-image.jpg" />
+    <meta property="og:url" content="https://yourdomain.com/portfolio.html" />
+    <meta property="og:type" content="website" />
 
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Md. Abul Khayer Shuvo | Front-End Developer" />
+    <meta name="twitter:description" content="Professional frontend portfolio with clean UI, projects, and contact info." />
+    <meta name="twitter:image" content="https://yourdomain.com/assets/preview-image.jpg" />
 
-    <!-- AOS CSS for animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- TailwindCSS -->
-    <link rel="stylesheet" href="css/output.css" />
+     <!-- Font Awesome CDN -->
+     <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  
+      <!-- Swiper CSS CDN -->
+        <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+        />
+  
+  
+      <!-- AOS CSS for animation -->
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  
+      <!-- TailwindCSS -->
+        <link rel="stylesheet" href="css/output.css" />
+  
+      <!-- ✅ Dark mode init before anything else -->
+      <script src="js/darkmode.js"></script>
 
-    <!-- ✅ Dark mode init before anything else -->
-    <script src="js/darkmode.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "CodeCrafter",
+        "url": "http://developer-portfolio-tem-plate.netlify.app",
+        "sameAs": [
+          "https://github.com/CodeCrafter",
+          "https://linkedin.com/in/CodeCrafter"
+        ],
+        "jobTitle": "Front-end Developer",
+        "image": "http://developer-portfolio-tem-plate.netlify.app/assets/profile.jpg",
+        "email": "mailto:your-email@example.com"
+      }
+      </script>
   </head>
 
   <body
@@ -43,19 +76,19 @@
 
      <!-- Desktop Menu -->
      <nav class="space-x-6 hidden md:flex">
-       <a href="index.html" class="nav-link hover:text-blue-600 transition">Home</a>
-       <a href="about.html" class="nav-link hover:text-blue-600 transition">About</a>
-       <a href="portfolio.html" class="nav-link hover:text-blue-600 transition">Portfolio</a>
-       <a href="services.html" class="nav-link hover:text-blue-600 transition">Services</a>
-       <a href="contact.html" class="nav-link hover:text-blue-600 transition">Contact</a>
+       <a href="index.html" class="nav-link hover:text-blue-600 transition" aria-label="Home">Home</a>
+       <a href="about.html" class="nav-link hover:text-blue-600 transition" aria-label="About">About</a>
+       <a href="portfolio.html" class="nav-link hover:text-blue-600 transition" aria-label="Portfolio">Portfolio</a>
+       <a href="services.html" class="nav-link hover:text-blue-600 transition" aria-label="Services">Services</a>
+       <a href="contact.html" class="nav-link hover:text-blue-600 transition" aria-label="Contact">Contact</a>
      </nav>
 
      <!-- Dark Toggle & Hamburger -->
      <div class="flex items-center space-x-4">
-       <button id="theme-toggle" class="text-2xl">
+       <button id="theme-toggle" class="text-2xl" aria-label="Toggle-theme">
          <i class="fa-regular fa-moon"></i>
        </button>
-       <button id="menu-toggle" class="text-2xl md:hidden focus:outline-none">
+       <button id="menu-toggle" class="text-2xl md:hidden focus:outline-none" aria-label="Toggle-menu">
          <i class="fas fa-bars"></i>
        </button>
      </div>
@@ -66,11 +99,11 @@
      id="mobile-menu"
      class="md:hidden hidden bg-white dark:bg-gray-800 px-4 pb-4 space-y-2 transition-all duration-300"
    >
-     <a href="index.html" class="nav-link block hover:text-blue-600 transition">Home</a>
-     <a href="about.html" class="nav-link block hover:text-blue-600 transition">About</a>
-     <a href="portfolio.html" class="nav-link block hover:text-blue-600 transition">Portfolio</a>
-     <a href="services.html" class="nav-link block hover:text-blue-600 transition">Services</a>
-     <a href="contact.html" class="nav-link block hover:text-blue-600 transition">Contact</a>
+     <a href="index.html" class="nav-link block hover:text-blue-600 transition" aria-label="Home">Home</a>
+     <a href="about.html" class="nav-link block hover:text-blue-600 transition" aria-label="About">About</a>
+     <a href="portfolio.html" class="nav-link block hover:text-blue-600 transition" aria-label="Portfolio">Portfolio</a>
+     <a href="services.html" class="nav-link block hover:text-blue-600 transition" aria-label="Services">Services</a>
+     <a href="contact.html" class="nav-link block hover:text-blue-600 transition" aria-label="Contact">Contact</a>
  </div>
  </header>
  <!-- Navbar End -->
@@ -87,7 +120,7 @@
             
               <!-- Project Card 1-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/responsive-portfolio-website.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/responsive-portfolio-website.jpg" alt="responsive-portfolio-website image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Responsive Portfolio Website</h3>
@@ -95,12 +128,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -109,7 +142,7 @@
               </div>
               <!-- Project Card 2-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/agency-page.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/agency-page.jpg" alt="agency-page image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Creative Agency Landing Page</h3>
@@ -117,12 +150,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -131,7 +164,7 @@
               </div>
               <!-- Project Card 3-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/modern-e-commerce-store.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/modern-e-commerce-store.jpg" alt="modern-e-commerce-store image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Modern E-commerce Store</h3>
@@ -139,12 +172,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -153,7 +186,7 @@
               </div>
               <!-- Project Card 4-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/cafe-website.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/cafe-website.jpg" alt="cafe-website image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Restaurant / Cafe Website</h3>
@@ -161,12 +194,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -175,7 +208,7 @@
               </div>
               <!-- Project Card 5-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/fitness-trainer-homepage.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/fitness-trainer-homepage.jpg" alt="fitness-trainer-homepage image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Fitness Trainer Homepage</h3>
@@ -183,12 +216,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -197,7 +230,7 @@
               </div>
               <!-- Project Card 6-->
               <div class="bg-gray-100 dark:bg-gray-800 rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 flex flex-col">
-                <img src="images/photography-home-page.jpg" alt="Project 1" class="w-full h-52 object-cover">
+                <img src="images/photography-home-page.jpg" alt="photography-home-page image" class="w-full h-52 object-cover">
                 <div class="p-5 flex-1 flex flex-col justify-between">
                   <div>
                     <h3 class="text-xl font-semibold text-gray-800 dark:text-white mb-2">Photography Showcase Site</h3>
@@ -205,12 +238,12 @@
                   </div>
                   <div class="flex gap-4 mt-auto">
                     <a href="https://your-live-preview-link.com" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition" aria-label="Live Preview">
                       <i class="fas fa-eye"></i>
                       Live Preview
                     </a>
                     <a href="https://github.com/your-github-link" target="_blank"
-                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">
+                      class="flex items-center gap-2 px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition" aria-label="github">
                       <i class="fab fa-github"></i>
                       GitHub
                     </a>
@@ -226,7 +259,7 @@
           <!-- View More Button -->
           <div class="text-center mt-12" data-aos="fade-up" data-aos-delay="200">
             <a href="portfolio.html"
-              class="inline-block px-6 py-3 bg-gradient-to-r from-purple-500 to-indigo-600 text-white font-semibold rounded-full hover:scale-105 transition duration-300">
+              class="inline-block px-6 py-3 bg-gradient-to-r from-purple-500 to-indigo-600 text-white font-semibold rounded-full hover:scale-105 transition duration-300" aria-label="View More Project">
               View More Projects
             </a>
           </div>
@@ -244,20 +277,20 @@
       <div>
         <h4 class="text-xl font-semibold mb-2">Quick Links</h4>
         <ul class="text-gray-400 space-y-2">
-            <li><a href="index.html" class="hover:text-white">Home</a></li>
-            <li><a href="about.html" class="hover:text-white">About</a></li>
-            <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
-          <li><a href="services.html" class="hover:text-white">Services</a></li>
-          <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+            <li><a href="index.html" class="hover:text-white" aria-label="Home">Home</a></li>
+            <li><a href="about.html" class="hover:text-white" aria-label="About">About</a></li>
+            <li><a href="portfolio.html" class="hover:text-white" aria-label="Portfolio">Portfolio</a></li>
+          <li><a href="services.html" class="hover:text-white" aria-label="Services">Services</a></li>
+          <li><a href="contact.html" class="hover:text-white" aria-label="Contact">Contact</a></li>
         </ul>
       </div>
       <div>
         <h4 class="text-xl font-semibold mb-2">Connect</h4>
         <p class="text-gray-400 mb-2">Email: yourmail@example.com</p>
         <div class="flex justify-center md:justify-start gap-4 text-lg">
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-github"></i></a>
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="github"><i class="fab fa-github"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="linkedin"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -271,8 +304,6 @@
      <script src="js/main.js"></script>
      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-     <!-- Swiper JS CDN (before </body>) -->
-     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
  
      <script>
        AOS.init();
