--- a/public/services.html
+++ b/public/services.html
@@ -3,29 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio</title>
+     <!-- ✅ SEO Title -->
+     <title>Professional Web Development Services | Front-End Expert</title>
 
-    <!-- Font Awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <!-- Swiper CSS CDN -->
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-     <!-- SwiperJS JS -->
-     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+     <!-- ✅ Meta Description -->
+     <meta name="description" content="Discover high-quality front-end web development services. I build responsive, modern, and SEO-optimized websites using HTML, CSS, TailwindCSS, Bootstrap, and JavaScript." />
+ 
+     <!-- ✅ Keywords (optional, less useful now) -->
+     <meta name="keywords" content="web development services, frontend developer, responsive website, TailwindCSS, HTML, CSS, JavaScript, freelance developer" />
+ 
+     <!-- ✅ Author -->
+     <meta name="author" content="Md. Abul Khayer Shuvo" />
+ 
+     <!-- ✅ Open Graph for Social Sharing -->
+     <meta property="og:title" content="Professional Web Development Services | Front-End Expert" />
+     <meta property="og:description" content="Need a fast, modern website? Hire an expert front-end developer for high-converting, SEO-friendly web solutions." />
+     <meta property="og:image" content="https://yourdomain.com/images/services-preview.jpg" />
+     <meta property="og:url" content="https://yourdomain.com/services.html" />
+     <meta property="og:type" content="website" />
+ 
+     <!-- ✅ Favicon -->
+     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+ 
 
-    <!-- AOS CSS for animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- TailwindCSS -->
-    <link rel="stylesheet" href="css/output.css" />
-
-    <!-- ✅ Dark mode init before anything else -->
-    <script src="js/darkmode.js"></script>
+       <!-- Font Awesome CDN -->
+    <link rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+ 
+     <!-- Swiper CSS CDN -->
+       <link
+       rel="stylesheet"
+       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+       />
+ 
+ 
+     <!-- AOS CSS for animation -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+ 
+     <!-- TailwindCSS -->
+       <link rel="stylesheet" href="css/output.css" />
+ 
+     <!-- ✅ Dark mode init before anything else -->
+     <script src="js/darkmode.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "CodeCrafter",
+        "url": "http://developer-portfolio-tem-plate.netlify.app",
+        "sameAs": [
+          "https://github.com/CodeCrafter",
+          "https://linkedin.com/in/CodeCrafter"
+        ],
+        "jobTitle": "Front-end Developer",
+        "image": "http://developer-portfolio-tem-plate.netlify.app/assets/profile.jpg",
+        "email": "mailto:your-email@example.com"
+      }
+      </script>
   </head>
 
   <body
@@ -43,19 +77,19 @@
 
      <!-- Desktop Menu -->
      <nav class="space-x-6 hidden md:flex">
-       <a href="index.html" class="nav-link hover:text-blue-600 transition">Home</a>
-       <a href="about.html" class="nav-link hover:text-blue-600 transition">About</a>
-       <a href="portfolio.html" class="nav-link hover:text-blue-600 transition">Portfolio</a>
-       <a href="services.html" class="nav-link hover:text-blue-600 transition">Services</a>
-       <a href="contact.html" class="nav-link hover:text-blue-600 transition">Contact</a>
+       <a href="index.html" class="nav-link hover:text-blue-600 transition" aria-label="Home">Home</a>
+       <a href="about.html" class="nav-link hover:text-blue-600 transition" aria-label="About">About</a>
+       <a href="portfolio.html" class="nav-link hover:text-blue-600 transition" aria-label="Portfolio">Portfolio</a>
+       <a href="services.html" class="nav-link hover:text-blue-600 transition" aria-label="Services">Services</a>
+       <a href="contact.html" class="nav-link hover:text-blue-600 transition" aria-label="Contact">Contact</a>
      </nav>
 
      <!-- Dark Toggle & Hamburger -->
      <div class="flex items-center space-x-4">
-       <button id="theme-toggle" class="text-2xl">
+       <button id="theme-toggle" class="text-2xl" aria-label="Toggle-theme">
          <i class="fa-regular fa-moon"></i>
        </button>
-       <button id="menu-toggle" class="text-2xl md:hidden focus:outline-none">
+       <button id="menu-toggle" class="text-2xl md:hidden focus:outline-none" aria-label="Toggle-menu">
          <i class="fas fa-bars"></i>
        </button>
      </div>
@@ -66,11 +100,11 @@
      id="mobile-menu"
      class="md:hidden hidden bg-white dark:bg-gray-800 px-4 pb-4 space-y-2 transition-all duration-300"
    >
-     <a href="index.html" class="nav-link block hover:text-blue-600 transition">Home</a>
-     <a href="about.html" class="nav-link block hover:text-blue-600 transition">About</a>
-     <a href="portfolio.html" class="nav-link block hover:text-blue-600 transition">Portfolio</a>
-     <a href="services.html" class="nav-link block hover:text-blue-600 transition">Services</a>
-     <a href="contact.html" class="nav-link block hover:text-blue-600 transition">Contact</a>
+     <a href="index.html" class="nav-link block hover:text-blue-600 transition" aria-label="Home">Home</a>
+     <a href="about.html" class="nav-link block hover:text-blue-600 transition" aria-label="About">About</a>
+     <a href="portfolio.html" class="nav-link block hover:text-blue-600 transition" aria-label="Portfolio">Portfolio</a>
+     <a href="services.html" class="nav-link block hover:text-blue-600 transition" aria-label="Services">Services</a>
+     <a href="contact.html" class="nav-link block hover:text-blue-600 transition" aria-label="Contact">Contact</a>
  </div>
  </header>
  <!-- Navbar End -->
@@ -91,7 +125,7 @@
       <!-- Optional Illustration -->
       <img
         src="images/2-services-color.png"
-        alt="Services Illustration"
+        alt="Services Illustration image"
         class="w-32 max-w-full mx-auto mb-8"
       />
        <!-- SVG Illustration -->
@@ -99,8 +133,7 @@
       <!-- Call to Action Button -->
       <a
         href="#services-list"
-        class="inline-block bg-blue-600 text-white font-semibold px-8 py-4 rounded-lg shadow-lg hover:bg-blue-700 transition"
-      >
+        class="inline-block bg-blue-600 text-white font-semibold px-8 py-4 rounded-lg shadow-lg hover:bg-blue-700 transition" aria-label="Explore Services">
         Explore Services
       </a>
     </section>
@@ -198,20 +231,20 @@
       <div>
         <h4 class="text-xl font-semibold mb-2">Quick Links</h4>
         <ul class="text-gray-400 space-y-2">
-            <li><a href="index.html" class="hover:text-white">Home</a></li>
-            <li><a href="about.html" class="hover:text-white">About</a></li>
-            <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
-          <li><a href="services.html" class="hover:text-white">Services</a></li>
-          <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+            <li><a href="index.html" class="hover:text-white" aria-label="Home">Home</a></li>
+            <li><a href="about.html" class="hover:text-white" aria-label="About">About</a></li>
+            <li><a href="portfolio.html" class="hover:text-white" aria-label="Portfolio">Portfolio</a></li>
+          <li><a href="services.html" class="hover:text-white" aria-label="Services">Services</a></li>
+          <li><a href="contact.html" class="hover:text-white" aria-label="Contact">Contact</a></li>
         </ul>
       </div>
       <div>
         <h4 class="text-xl font-semibold mb-2">Connect</h4>
         <p class="text-gray-400 mb-2">Email: yourmail@example.com</p>
         <div class="flex justify-center md:justify-start gap-4 text-lg">
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-github"></i></a>
-          <a href="#" class="hover:text-blue-400"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="github"><i class="fab fa-github"></i></a>
+          <a href="#" class="hover:text-blue-400" aria-label="linkedin"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -223,8 +256,6 @@
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <!-- Swiper JS CDN (before </body>) -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script>
       AOS.init();
